# orapa-mine

./: .mcp.json  DIRECTOR_UI_IMPLEMENTATION.md  GAME_RULES.md  PROJECT_STATUS.md  README.md  TRIANGLE_GEOMETRY_FIX.md  docker-compose.yml
backend/: .env.example  .gitignore  Makefile  SUPABASE_INTEGRATION.md  piccolo_conf.py  pyproject.toml  requirements.txt  test_supabase.py
backend/.claude/: settings.local.json
backend/app/: __init__.py  config.py  main.py  piccolo_app.py  supabase_client.py
backend/app/api/: __init__.py  game.py  user.py
backend/app/models/: __init__.py  game.py  user.py
backend/app/piccolo_migrations/: app_2025_10_29t15_33_15_176869.py
backend/app/schemas/: __init__.py  game.py  user.py
backend/app/services/: __init__.py  color_mixer.py  piece_geometry.py  ray_tracer.py
frontend/: HOW_TO_USE_IMPROVEMENTS.md  IMPROVEMENTS_SUMMARY.md  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.css  App.tsx  index.css
frontend/src/components/: DirectorView.css  DirectorView.test.tsx  DirectorView.tsx  DirectorViewFinal.tsx  DirectorViewImproved.tsx  DirectorViewModern.css  DirectorViewModern.tsx  GameBoard.css  GameBoard.tsx  GameLobby.css  GameLobby.tsx  PiecePalette.css  PiecePalette.tsx
frontend/src/test/: setup.ts
