[project]
name = "orapa-mine"
version = "1.0.0"
description = "Orapa Mine board game - multiplayer web implementation"
requires-python = ">=3.12"
dependencies = [
    "asyncpg>=0.30.0",
    "fastapi>=0.120.1",
    "passlib[bcrypt]>=1.7.4",
    "piccolo[postgres]>=1.30.0",
    "psycopg[binary]>=3.2.12",
    "pydantic>=2.12.3",
    "pydantic-settings>=2.11.0",
    "python-dotenv>=1.2.1",
    "python-jose[cryptography]>=3.5.0",
    "python-multipart>=0.0.20",
    "supabase>=2.22.3",
    "uvicorn[standard]>=0.38.0",
    "websockets>=15.0.1",
]


[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "mypy>=1.18.2",
    "poethepoet>=0.37.0",
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0",
    "ruff>=0.14.2",
]

[tool.ruff]
line-length = 100
target-version = "py312"
extend-exclude = ["app/piccolo_migrations"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "ARG", # flake8-unused-arguments
    "SIM", # flake8-simplify
]
ignore = [
    "E501", # line too long (handled by formatter)
    "B008", # do not perform function calls in argument defaults
    "W191", # indentation contains tabs
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"] # Unused imports in __init__.py
"app/piccolo_migrations/*.py" = ["E501", "F401", "F403", "F405"] # Generated migration files

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_any_generics = false
disallow_subclassing_any = true
disallow_untyped_calls = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
follow_imports = "normal"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["piccolo.*", "passlib.*", "jose.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["app.piccolo_migrations.*"]
ignore_errors = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"

[tool.poe.tasks]
# Linting
lint = "ruff check ./app"
lint-fix = "ruff check --fix ./app"

# Formatting
format = "ruff format ./app"
format-check = "ruff format --check ./app"

# Type checking
type = "mypy ./app"

env = "cp .env.example .env"

run = "uvicorn app.main:app --reload --host 0.0.0.0 --port 8000"

migrate = "piccolo migrations forwards app"

clean = "find . -type f -name '*.pyc' -delete && find . -type d -name '__pycache__' -delete"

# Combined checks
[tool.poe.tasks.check]
help = "Run all checks (lint, format, type)"
sequence = ["format-check", "lint", "type"]
ignore_fail = false

[tool.poe.tasks.fix]
help = "Auto-fix linting and formatting issues"
sequence = ["format", "lint-fix"]
